# hatch-bazel-and-pybind11

./: .gitignore  LICENSE.txt  README.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
src/hatch_bazel_and_pybind11/: BUILD.bazel  MODULE.bazel  __about__.py  __init__.py  pybind_extension.cc
src/hatch_bazel_and_pybind11/cpp/: BUILD.bazel  pybind_extension.cc
src/hatch_bazel_and_pybind11/cpp/submodule/: BUILD.bazel  submodule.h
tests/: integration_test.py
