[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "hatch-bazel-and-pybind11"
dynamic = ["version"]
description = 'Testing the integration of hatch, bazel and pybind11'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Enrico Guiraud", email = "enrico.guiraud@pm.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/eguiraud/hatch-bazel-and-pybind11#readme"
Issues = "https://github.com/eguiraud/hatch-bazel-and-pybind11/issues"
Source = "https://github.com/eguiraud/hatch-bazel-and-pybind11"

[tool.hatch.version]
path = "src/hatch_bazel_and_pybind11/__about__.py"

# NOTE: I could not think of a way to not produce both pybind_extension.so and
# pybind/pybind_extension.so
[[tool.hatch.build.hooks.build-scripts.scripts]]
work_dir = "src/hatch_bazel_and_pybind11/cpp"
out_dir = "src/hatch_bazel_and_pybind11/cpp/bazel_artifacts/"
commands = [
    "bazel build //...",
    "cp -f bazel-bin/pybind_extension.so .",
]
artifacts = [
    "pybind_extension.so",
]

[tool.hatch.build]
packages = ["src/hatch_bazel_and_pybind11"]

[tool.hatch.build.targets.sdist]
# FIXME: why does none of this work?
include = [
  "hatch_bazel_and_pybind11/**/*.h",
  "hatch_bazel_and_pybind11/cpp/submodule",
  "hatch_bazel_and_pybind11/cpp/submodule/submodule.h",
  "src/hatch_bazel_and_pybind11/cpp/submodule",
  "src/hatch_bazel_and_pybind11/cpp/submodule",
  "src/hatch_bazel_and_pybind11/cpp/submodule/submodule.h",
]
artifacts = [
  "src/hatch_bazel_and_pybind11/cpp/pybind_extension.so",
]
